import "google/protobuf/struct.proto";

// a grpc service that allows clients querying the graph
service GraphService {
	rpc GetObject (GetObjectRequest) returns (GetObjectResponse) {}
	rpc GetEdge (GetEdgeRequest) returns (GetEdgeResponse) {}
	rpc GetEdges (GetEdgesRequest) returns (GetEdgesResponse) {}
}

struct GetObjectRequest {
	string objectId = 1;
}

struct GetObjectResponse {
	Object object = 1;
}

struct Object {
	string objectId = 1;
	string type = 2;
	google.protobuf.Struct metadata = 3;
}
